tests/cases/parser/misc/issue_223.stderr
error: expected an expression, however received a `:`
 --> $DIR/issue_223.hash:7:13
6 |   
7 |   wrap := (res: Result<T, (int, str)>): Result<T, IoError> => match res {
  |               ^ 
8 |   }
  = help: expected a `,`
